# gz_entity_manager_cpp

./: README.md  package.xml
src/: delete_entity.cpp  spawn_entity.cpp
worlds/: default.sdf
~/.vscode-root/: Network Persistent State  TransportSecurity  machineid
~/.vscode-root/Cache/Cache_Data/: 5283edf90cf4ab50_0  6a6188f0789c8aba_0  9f50bddbd978eddd_0  b99a8db8e3413779_0  be6f80890c0806b1_0  c930620e9eb9c6a7_0  d121e2a6335b7510_0  d67a7d57e8547ca1_0  e131db85efc5d7a7_0
~/.vscode-root/Cache/Cache_Data/index-dir/: the-real-index
~/.vscode-root/CachedData/2fc07b811f760549dab9be9d2bedd06c51dfcb9a/chrome/js/: 18c5d445dc51cef3_0  5ffc9b8837f2b807_0  82449cc5d0ef2cae_0  91cb6b9d23d5a62a_0  a3103c761091c801_0  f53c0888c292bb16_0
~/.vscode-root/CachedProfilesData/__default__profile__/: extensions.builtin.cache  extensions.user.cache
~/.vscode-root/Code Cache/js/index-dir/: the-real-index
~/.vscode-root/Crashpad/: client_id
~/.vscode-root/DawnGraphiteCache/: data_1  index
~/.vscode-root/DawnWebGPUCache/: data_1  index
~/.vscode-root/GPUCache/: data_0  data_1  data_2  index
~/.vscode-root/Local Storage/leveldb/: LOG
~/.vscode-root/Shared Dictionary/cache/index-dir/: the-real-index
~/.vscode-root/User/History/-2a85903c/: CmbZ.cpp  entries.json
~/.vscode-root/User/History/-5d904324/: 4AgW.txt  HXSe.txt  QC2O.txt  entries.json
~/.vscode-root/User/History/779851eb/: entries.json
~/.vscode-root/User/globalStorage/: state.vscdb  storage.json
~/.vscode-root/User/workspaceStorage/9dd8caece9c4eeb708847f05e9a0f086/: state.vscdb  workspace.json
(+2 files in other folders)
